--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,11 @@
   "version" : "1.0",
   "name" : "casebrowser",
   "description" : "建筑狗的案例搜索神器",
-  // "icons" : {
-  //   "16" : "./icons/time16.png",
-  //   "48" : "./icons/time48.png",
-  //   "128" : "./icons/time128.png"
-  // },
+  "icons" : {
+     "16" : "./img/casebrowser.png",
+     "48" : "./img/casebrowser.png",
+     "128" : "./img/casebrowser.png"
+   },
   // "browser_action" : {
   //   "default_title" : "test",
   //   "default_popup" : "demo.html",
